# Mastering-4-critical-SKILLS-using-C-17

./: .gitignore  README.md  todo list.txt
01HospitalSystem/: hospital_v1.cpp
01_HospitalSystem/: a.out  hospital.cpp
01_HospitalSystem/doc/: hospital_design.drawio
02Library System/: Library_v1 .1.cpp  Library_v1.cpp
02_Library System/: Library_v1.cpp  a.out  library_project.drawio
02_Library System/doc/: a.out
03_Ask.fm/: Ask-fm_v1.cpp
03_Ask.fm/doc/: Askme_classDiagram.drawio
03_Ask.fm/test/: string_with_spaces.cpp
05_OOPing/: project_askme_v2.cpp
170 problems/01_printing/: Printing.cpp  a.out  practise.cpp
170 problems/02_Data Types and Variables/: DataTypesAndVariables  DataTypesAndVariables.cpp  practise.cpp
170 problems/03_Operators/: Operators.cpp  a.out
170 problems/15_STL/: 2D_vector.cpp  3D_vector.cpp  CMakeLists.txt  Deque.cpp  Map.cpp  Queue.cpp  Range_based_For.cpp  STL.drawio  Set.cpp  a.out  algorithms.cpp  iterator.cpp  multiSet.cpp  pair.cpp  practice.cpp  priority_queue.cpp  stack.cpp  stack_practice.cpp  stl.txt  string_cpp.cpp  tuple.cpp  unorderedSet.cpp  vector.cpp
170 problems/15_STL/STL Practice/: a.out  practice2-stack.cpp  practice3-validPra_v1.cpp  practice3-validPra_v2.cpp  practice5-SlidingWindowMax_v1.cpp  practice5-SlidingWindowMax_v3.cpp
170 problems/15_STL/hw/hw1/: hw_01_answer.cpp  hw_02_answer.cpp  hw_04_answer.cpp  hw_05_answer.cpp
170 problems/15_STL/hw/hw2/: hw_07_answer.cpp  hw_08_answer.cpp  hw_09_answer.cpp
170 problems/16_Files and Streams-/: CMakeLists.txt  practice.cpp
(+654 files in other folders)
